--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!doctype html>✩
 <html lang="en">
     <head>
         <title>Underships</title>
@@ -12,13 +12,22 @@
     </head>
     <body>
         <h1>Underships</h1>
-        <p>Created by -ThePixelGuy-. Contact me at <a href="hablab.emails@gmail.com"><u>hablab.emails@</u>g<u>mail.com</u></a>.<br><br>
-            First of all, if you don't know what Undertale is, get out now and get the game. Major spoilers. It's also a great game. So if you're spoiler-free now, Underships is a website dedicated to every Undertale ship concerning one of the 10 major characters. (Quick sidenote: <b>I HATE SHIPPING.</b>) The ships are sorted by ID, Ship Name, Portmanteau, and Rating.
+        <p>Created by -ThePixelGuy-. Contact me at <a href="hablab.emails@gmail.com"><u>hablab.emails@</u>g<u>mail.com</u></a>.<br>
+           (Quick sidenote: <b>I HATE SHIPPING.</b> Shippers, get out if thou does not wish to be triggered.)<br><br>
+            First of all, if you don't know what Undertale is, get out now and get the game. Major spoilers. It's also a great game. So if you're spoiler-free now, Underships this website was built for the purpose of listing every Undertale ship concerning any of the 10 main characters (I am thinking of expanding the site to include mini-bosses, as soon as I calculate how many ships that is and what the definition of a mini-boss is). Why, you ask? Well... Because I goddamn feel like it, that's what! The ships are sorted by ID, Ship Name, Portmanteau, and Rating.
             <ul>
                 <li>Shipping ID is the fused Character IDs of the characters being shipped.</li>
                 <li>The Shipping Name is the fused names of the two characters, seperated by an "x" in traditional fanfic fashion.</li>
                 <li>The Shipping Portmanteau is the fused names of the characters.</li>
-                <li>Shipping Rating is my personal rating out of 5 for these ships. <u>Do not </u>g<u>et tri</u>gg<u>ered over them.</u></li>
+                <li>Shipping Rating is my personal rating out of 5 for these ships. <u>Do not </u>g<u>et tri</u>gg<u>ered over them.</u>
+                    <ul>
+                        <li>✩ - This ship makes no sense.</li>
+                        <li>✩✩ - This ship <i>kinda</i> makes sense, but it's still bad.</li>
+                        <li>✩✩✩ - Pretty good, I guess.</li>
+                        <li>✩✩✩✩ - Damn, u dun good m9.</li>
+                        <li>✩✩✩✩✩ - Annoying Dog approved (canon ship).</li>
+                    </ul>
+                </li>
             </ul>
     ..so sit back, get a vomit bag ready, and enjoy.
         </p>
@@ -83,271 +92,271 @@
                 <td>01</td>
                 <td>Frisk x Flowey</td>
                 <td>Frowey</td>
-                <td>0/5</td>
+                <td>✩</td>
             </tr>
             <tr>
                 <td>02</td>
                 <td>Frisk x Toriel <i>(note 1)</i></td>
                 <td>Froriel</td>
-                <td>0/5</td>
+                <td>✩</td>
             </tr>
             <tr>
                 <td>03</td>
                 <td>Frisk x Sans</td>
                 <td>Frans</td>
-                <td>0/5</td>
+                <td>✩</td>
             </tr>
             <tr>
                 <td>04</td>
                 <td>Frisk x Papyrus</td>
                 <td>Frapyrus</td>
-                <td>1/5 <i>(note 2)</i></td>
+                <td>✩✩ <i>(note 2)</i></td>
             </tr>
             <tr>
                 <td>05</td>
                 <td>Frisk x Undyne</td>
                 <td>Frundyne</td>
-                <td>0/5</td>
+                <td>✩</td>
             </tr>
             <tr>
                 <td>06</td>
                 <td>Frisk x Alphys</td>
                 <td>Fralphys</td>
-                <td>1/5 <i>(note 2)</i></td>
+                <td>✩✩ <i>(note 2)</i></td>
             </tr>
             <tr>
                 <td>07</td>
                 <td>Frisk x Mettaton</td>
                 <td>Fretatton</td>
-                <td>0/5</td>
+                <td>✩</td>
             </tr>
             <tr>
                 <td>08</td>
                 <td>Frisk x Asgore</td>
                 <td>Frasgore</td>
-                <td>0/5</td>
+                <td>✩</td>
             </tr>
             <tr>
                 <td>09</td>
                 <td>Frisk x Chara</td>
                 <td>Frara</td>
-                <td>0/5</td>
+                <td>✩</td>
             </tr>
             <tr>
                 <td>12</td>
                 <td>Flowey x Toriel</td>
                 <td>Floriel</td>
-                <td>0/5</td>
+                <td>✩✩</td>
             </tr>
             <tr>
                 <td>13</td>
                 <td>Flowey x Sans</td>
                 <td>Flans</td>
-                <td>0/5</td>
+                <td>✩</td>
             </tr>
             <tr>
                 <td>14</td>
                 <td>Flowey x Papyrus</td>
                 <td>Flapyrus</td>
-                <td>0/5</td>
+                <td>✩</td>
             </tr>
             <tr>
                 <td>15</td>
                 <td>Flowey x Undyne</td>
                 <td>Flundyne</td>
-                <td>0/5</td>
+                <td>✩</td>
             </tr>
             <tr>
                 <td>16</td>
                 <td>Flowey x Alphys</td>
                 <td>Flalphys</td>
-                <td>1/5</td>
+                <td>✩✩</td>
             </tr>
             <tr>
                 <td>17</td>
                 <td>Flowey x Mettaton</td>
                 <td>Flettaton</td>
-                <td>0/5</td>
+                <td>✩</td>
             </tr>
             <tr>
                 <td>18</td>
                 <td>Flowey x Asgore</td>
                 <td>Flasgore</td>
-                <td>1/5</td>
+                <td>✩✩</td>
             </tr>
             <tr>
                 <td>19</td>
                 <td>Flowey x Chara</td>
                 <td>Flara</td>
-                <td>1/5</td>
+                <td>✩✩</td>
             </tr>
             <tr>
                 <td>23</td>
                 <td>Toriel x Sans</td>
                 <td>Soriel</td>
-                <td>3/5</td>
+                <td>✩✩✩✩</td>
             </tr>
             <tr>
                 <td>24</td>
                 <td>Toriel x Papyrus</td>
                 <td>Torpyrus</td>
-                <td>0/5</td>
+                <td>✩</td>
             </tr>
             <tr>
                 <td>25</td>
                 <td>Toriel x Undyne</td>
                 <td>Tundyne</td>
-                <td>0/5</td>
+                <td>✩</td>
             </tr>
             <tr>
                 <td>26</td>
                 <td>Toriel x Alphys</td>
                 <td>Talphys</td>
-                <td>0/5</td>
+                <td>✩</td>
             </tr>
             <tr>
                 <td>27</td>
                 <td>Toriel x Mettaton</td>
                 <td>Tettaton</td>
-                <td>0/5</td>
+                <td>✩</td>
             </tr>
             <tr>
                 <td>28</td>
                 <td>Toriel x Asgore</td>
                 <td>Tasgore</td>
-                <td>5/5</td>
+                <td>✩✩✩✩✩</td>
             </tr>
             <tr>
                 <td>29</td>
                 <td>Toriel x Chara</td>
                 <td>Tara</td>
-                <td>1/5</td>
+                <td>✩✩</td>
             </tr>
             <tr>
                 <td>34</td>
                 <td>Sans x Papyrus</td>
                 <td>Fontcest</td>
-                <td>0/5</td>
+                <td>✩</td>
             </tr>
             <tr>
                 <td>35</td>
                 <td>Sans x Undyne</td>
                 <td>Sundyne</td>
-                <td>0/5</td>
+                <td>✩</td>
             </tr>
             <tr>
                 <td>36</td>
                 <td>Sans x Alphys <i>(note 3)</i></td>
                 <td>Salphys</td>
-                <td>1/5</td>
+                <td>✩✩</td>
             </tr>
             <tr>
                 <td>37</td>
                 <td>Sans x Mettaton</td>
                 <td>Settaton</td>
-                <td>0/5</td>
+                <td>✩</td>
             </tr>
             <tr>
                 <td>38</td>
                 <td>Sans x Asgore</td>
                 <td>Sasgore</td>
-                <td>0/5</td>
+                <td>✩</td>
             </tr>
             <tr>
                 <td>39</td>
                 <td>Sans x Chara</td>
                 <td>Sara</td>
-                <td>0/5</td>
+                <td>✩</td>
             </tr>
             <tr>
                 <td>45</td>
                 <td>Papyrus x Undyne</td>
                 <td>Pundyne</td>
-                <td>3/5</td>
+                <td>✩✩✩✩</td>
             </tr>
             <tr>
                 <td>46</td>
                 <td>Papyrus x Alphys</td>
                 <td>Palphys</td>
-                <td>0/5</td>
+                <td>✩</td>
             </tr>
             <tr>
                 <td>47</td>
                 <td>Papyrus x Mettaton</td>
                 <td>Papyton</td>
-                <td>1/5</td>
+                <td>✩✩</td>
             </tr>
             <tr>
                 <td>48</td>
                 <td>Papyrus x Asgore</td>
                 <td>Pasgore</td>
-                <td>0/5</td>
+                <td>✩</td>
             </tr>
             <tr>
                 <td>49</td>
                 <td>Papyrus x Chara</td>
                 <td>Para</td>
-                <td>0/5</td>
+                <td>✩</td>
             </tr>
             <tr>
                 <td>56</td>
                 <td>Undyne x Alphys</td>
                 <td>Alphyne</td>
-                <td>5/5</td>
+                <td>✩✩✩✩✩</td>
             </tr>
             <tr>
                 <td>57</td>
                 <td>Undyne x Mettaton</td>
                 <td>Metundyne</td>
-                <td>0/5</td>
+                <td>✩</td>
             </tr>
             <tr>
                 <td>58</td>
                 <td>Undyne x Asgore</td>
                 <td>Unasgore</td>
-                <td>1/5</td>
+                <td>✩✩</td>
             </tr>
             <tr>
                 <td>59</td>
                 <td>Undyne x Chara</td>
                 <td>Chundyne</td>
-                <td>0/5</td>
+                <td>✩</td>
             </tr>
             <tr>
                 <td>67</td>
                 <td>Alphys x Mettaton</td>
                 <td>Alphyton</td>
-                <td>3/5</td>
+                <td>✩✩✩✩</td>
             </tr>
             <tr>
                 <td>68</td>
                 <td>Alphys x Asgore</td>
                 <td>Alphgore</td>
-                <td>0/5</td>
+                <td>✩</td>
             </tr>
             <tr>
                 <td>69</td>
                 <td>Alphys x Chara</td>
                 <td>Chalphys</td>
-                <td>0/5</td>
+                <td>✩</td>
             </tr>
             <tr>
                 <td>78</td>
                 <td>Mettaton x Asgore</td>
                 <td>Mettasgore</td>
-                <td>0/5</td>
+                <td>✩</td>
             </tr>
             <tr>
                 <td>79</td>
                 <td>Mettaton x Chara</td>
                 <td>Charaton</td>
-                <td>0/5</td>
+                <td>✩</td>
             </tr>
             <tr>
                 <td>89</td>
                 <td>Asgore x Chara</td>
                 <td>Chasgore</td>
-                <td>0/5</td>
+                <td>✩</td>
             </tr>
         </table>
         
