--- a/index.html
+++ b/index.html
@@ -246,9 +246,9 @@
             </tr>
             <tr>
                 <td>36</td>
-                <td>Sans x Alphys <i>(note 3)</i></td>
+                <td>Sans x Alphys</td>
                 <td>Salphys</td>
-                <td>✩✩</td>
+                <td>✩✩ <i>(note 3)</i></td>
             </tr>
             <tr>
                 <td>37</td>
